--- a/views/index.html
+++ b/views/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>RDBMS Data Dictionary Design</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="layout">
     <h1>Data Dictionary Design Application</h1>
-    <nav>
-      <a href="#login">Log In</a>
-      <a href="#createdd">Create Data Dictionary</a>
-    </nav>
-    <!-- Dynamic Content loaded here using JavaScript -->
-    <div id="content"></div>
 
+    <main class="layout-content">
+      <nav class="layout-nav">
+        <ul>
+          <li><a href="#login">Log In</a></li>
+          <li><a href="#createdd">Create Data Dictionary</a></li>
+        </ul>
+      </nav>
+    <!-- Dynamic Content loaded here using JavaScript -->
+      <div id="content"></div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
