--- a/app/style.css
+++ b/app/style.css
@@ -26,11 +26,11 @@
 
 
 /* Data Dictionary Page */
-#datadictionary {
+table {
   width: 100%;
 }
 
-#datadictionary, td, th{
+table, td, th{
     border: 1px solid black;
     border-collapse: collapse;
 }
