--- a/app/style.css
+++ b/app/style.css
@@ -9,6 +9,8 @@
   background-color: #F0F8FF;
 }
 
+
+
 #content {
   flex: 1;
 }
@@ -20,6 +22,27 @@
   order: -1;
   border-right: 1px solid black;
   margin-right: 1em;
+}
+
+.layout-nav > ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 75%;
+  /* background-color: #f1f1f1; */
+}
+
+.layout-nav > ul > li a {
+  display: block;
+  text-decoration: none;
+  color: #000;
+  margin-left: 2em;
+  padding: 5%;
+}
+
+.layout-nav > ul > li a:hover {
+    background-color: #555;
+    color: white;
 }
 
 @media (min-width: 768px) {
